--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -20,14 +20,17 @@
     .wrapper.theme-yellow .header.fixed {
         background-color: #FFFF00;
     }
+
     .wrapper.theme-blue .header.fixed {
         background-color: #9FD7FF;
         box-shadow: 0 2px 10px #133C581a;
     }
+
     .wrapper.theme-blackWhite .header.fixed {
         background-color: #000;
         box-shadow: 0 2px 10px rgba(255, 255, 255, 0.227);
     }
+
     .wrapper.theme-blackGreen .header.fixed {
         background-color: #000;
         box-shadow: 0 2px 10px #a9dd384b;
@@ -88,6 +91,7 @@
     background: #FFF;
     border-radius: 16px;
 }
+
 .wrapper.theme-blackGreen .header__logo-link {
     max-width: 62px;
     padding: 11px;
@@ -100,7 +104,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
-    display: block!important;
+    display: block !important;
 }
 
 .pre-mobile-menu {
@@ -116,15 +120,19 @@
 .wrapper.theme-white .header__menu {
     border: 1.6px solid #000;
 }
+
 .wrapper.theme-yellow .header__menu {
     border: 1.6px solid #000;
 }
+
 .wrapper.theme-blue .header__menu {
     border: 1.6px solid #133C58;
 }
+
 .wrapper.theme-blackWhite .header__menu {
     border: 1.6px solid #FFF;
 }
+
 .wrapper.theme-blackGreen .header__menu {
     border: 1.6px solid #A9DD38;
 }
@@ -157,21 +165,24 @@
 
 .header__smp-link {}
 
-.header__smp-img {
-}
+.header__smp-img {}
 
 .wrapper.theme-white .header__smp-img g rect {
     fill: #000;
 }
+
 .wrapper.theme-yellow .header__smp-img g rect {
     fill: #000;
 }
+
 .wrapper.theme-blue .header__smp-img g rect {
     fill: #133C58;
 }
+
 .wrapper.theme-blackWhite .header__smp-img g rect {
     fill: #FFF;
 }
+
 .wrapper.theme-blackGreen .header__smp-img g rect {
     fill: #A9DD38;
 }
@@ -222,19 +233,28 @@
     z-index: 2000;
 }
 
-    .wrapper.theme-white .mobile-menu__content, .wrapper.theme-white .mobile-menu__content-inner {
+.wrapper.theme-white .mobile-menu__content,
+.wrapper.theme-white .mobile-menu__content-inner {
     background: #FFF;
 }
-.wrapper.theme-yellow .mobile-menu__content, .wrapper.theme-yellow .mobile-menu__content-inner {
+
+.wrapper.theme-yellow .mobile-menu__content,
+.wrapper.theme-yellow .mobile-menu__content-inner {
     background: #FFFF00;
 }
-.wrapper.theme-blue .mobile-menu__content, .wrapper.theme-blue .mobile-menu__content-inner {
+
+.wrapper.theme-blue .mobile-menu__content,
+.wrapper.theme-blue .mobile-menu__content-inner {
     background: #9FD7FF;
 }
-.wrapper.theme-blackWhite .mobile-menu__content, .wrapper.theme-blackWhite .mobile-menu__content-inner {
+
+.wrapper.theme-blackWhite .mobile-menu__content,
+.wrapper.theme-blackWhite .mobile-menu__content-inner {
     background: #000;
 }
-.wrapper.theme-blackGreen .mobile-menu__content, .wrapper.theme-blackGreen .mobile-menu__content-inner {
+
+.wrapper.theme-blackGreen .mobile-menu__content,
+.wrapper.theme-blackGreen .mobile-menu__content-inner {
     background: #000;
 }
 
@@ -331,19 +351,23 @@
 }
 
 .wrapper.theme-white .header__dropdown .dropdown-toggle.show {
-    color: #808080!important;
+    color: #808080 !important;
 }
+
 .wrapper.theme-yellow .header__dropdown .dropdown-toggle.show {
-    color: #676767!important;
+    color: #676767 !important;
 }
+
 .wrapper.theme-blue .header__dropdown .dropdown-toggle.show {
-    color: #558db2!important;
+    color: #558db2 !important;
 }
+
 .wrapper.theme-blackWhite .header__dropdown .dropdown-toggle.show {
-    color: #969696!important;
+    color: #969696 !important;
 }
+
 .wrapper.theme-blackGreen .header__dropdown .dropdown-toggle.show {
-    color: #9aa18c!important;
+    color: #9aa18c !important;
 }
 
 .header__dropdown-menu {
@@ -359,18 +383,22 @@
     border: 1px solid #000;
     background-color: #FFF;
 }
+
 .wrapper.theme-yellow .header__dropdown-menu {
     border: 1px solid #000;
     background-color: #FFFF00;
 }
+
 .wrapper.theme-blue .header__dropdown-menu {
     border: 1px solid #133C58;
     background-color: #9FD7FF;
 }
+
 .wrapper.theme-blackWhite .header__dropdown-menu {
     border: 1px solid #FFF;
     background-color: #000;
 }
+
 .wrapper.theme-blackGreen .header__dropdown-menu {
     border: 1px solid #A9DD38;
     background-color: #000;
@@ -397,25 +425,30 @@
 .header__dropdown-menu .dropdown-item:hover {
     background-color: #b1c19081;
 }
+
 .wrapper.theme-white .dropdown-item:hover {
     background-color: #000;
-    color: #FFF!important;
+    color: #FFF !important;
 }
+
 .wrapper.theme-yellow .dropdown-item:hover {
     background-color: #000;
-    color: #FFFF00!important;
+    color: #FFFF00 !important;
 }
+
 .wrapper.theme-blue .dropdown-item:hover {
     background-color: #133C58;
-    color: #9FD7FF!important;
+    color: #9FD7FF !important;
 }
+
 .wrapper.theme-blackWhite .dropdown-item:hover {
     background-color: #FFF;
-    color: #000!important;
+    color: #000 !important;
 }
+
 .wrapper.theme-blackGreen .dropdown-item:hover {
     background-color: #A9DD38;
-    color: #000!important;
+    color: #000 !important;
 }
 
 .header__dropdown-menu .dropdown-header {
@@ -470,7 +503,7 @@
     .wrapper.theme-blackWhite .header {
         background: #000;
     }
-    
+
     .wrapper.theme-blackGreen .header {
         background: #000;
     }
@@ -534,15 +567,19 @@
     .wrapper.theme-white .burger-button span {
         background-color: #000;
     }
+
     .wrapper.theme-yellow .burger-button span {
         background-color: #000;
     }
+
     .wrapper.theme-blue .burger-button span {
         background-color: #133C58;
     }
+
     .wrapper.theme-blackWhite .burger-button span {
         background-color: #FFF;
     }
+
     .wrapper.theme-blackGreen .burger-button span {
         background-color: #A9DD38;
     }
@@ -550,15 +587,19 @@
     .wrapper.theme-white .pre-mobile-menu__dropdown-menu {
         background-color: #FFF;
     }
+
     .wrapper.theme-yellow .pre-mobile-menu__dropdown-menu {
         background-color: #FFFF00;
     }
+
     .wrapper.theme-blue .pre-mobile-menu__dropdown-menu {
         background-color: #9FD7FF;
     }
+
     .wrapper.theme-blackWhite .pre-mobile-menu__dropdown-menu {
         background-color: #000;
     }
+
     .wrapper.theme-blackGreen .pre-mobile-menu__dropdown-menu {
         background-color: #000;
     }
@@ -639,25 +680,27 @@
         transition: transform 0.3s ease;
     }
 
-    .wrapper[class*="theme"] .header__mobile-top {
-
-    }
+    .wrapper[class*="theme"] .header__mobile-top {}
 
     .wrapper.theme-white .header__mobile-top {
-    background-color: #FFF;
-}
-.wrapper.theme-yellow .header__mobile-top {
-    background-color: #FFFF00;
-}
-.wrapper.theme-blue .header__mobile-top {
-    background-color: #9FD7FF;
-}
-.wrapper.theme-blackWhite .header__mobile-top {
-    background-color: #000;
-}
-.wrapper.theme-blackGreen .header__mobile-top {
-    background-color: #000;
-}
+        background-color: #FFF;
+    }
+
+    .wrapper.theme-yellow .header__mobile-top {
+        background-color: #FFFF00;
+    }
+
+    .wrapper.theme-blue .header__mobile-top {
+        background-color: #9FD7FF;
+    }
+
+    .wrapper.theme-blackWhite .header__mobile-top {
+        background-color: #000;
+    }
+
+    .wrapper.theme-blackGreen .header__mobile-top {
+        background-color: #000;
+    }
 
     .mobile-menu {}
 
@@ -685,6 +728,26 @@
         background-color: #F8F8F8;
     }
 
+    .wrapper.theme-white .header__mobile-section-links.active {
+        background-color: #FFF;
+    }
+
+    .wrapper.wrapper.theme-yellow .header__mobile-section-links.active {
+        background-color: #FFFF00;
+    }
+
+    .wrapper.wrapper.wrapper.theme-blue .header__mobile-section-links.active {
+        background-color: #9FD7FF;
+    }
+
+    .wrapper.wrapper.theme-blackWhite .header__mobile-section-links.active {
+        background-color: #000;
+    }
+
+    .wrapper.wrapper.theme-blackGreen .header__mobile-section-links.active {
+        background-color: #000;
+    }
+
     .header__mobile-top.hidden {
         transform: translateY(-100%);
     }
@@ -693,6 +756,26 @@
         position: fixed;
         top: 0px;
         background-color: #F8F8F8;
+    }
+
+    .wrapper.theme-white .header__mobile-section-links.visible {
+        background-color: #FFF;
+    }
+
+    .wrapper.wrapper.theme-yellow .header__mobile-section-links.visible {
+        background-color: #FFFF00;
+    }
+
+    .wrapper.wrapper.wrapper.theme-blue .header__mobile-section-links.visible {
+        background-color: #9FD7FF;
+    }
+
+    .wrapper.wrapper.theme-blackWhite .header__mobile-section-links.visible {
+        background-color: #000;
+    }
+
+    .wrapper.wrapper.theme-blackGreen .header__mobile-section-links.visible {
+        background-color: #000;
     }
 
     .header__links-slider {
