--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -1,12 +1,13 @@
 /* БЛОК "О НАС" */
-.about-info {
-}
-.main__about-info {
-}
+.about-info {}
+
+.main__about-info {}
+
 .about-info__container {
     display: flex;
     gap: 60px;
 }
+
 .about-info__video-wrap {
     max-width: 610px;
     width: 100%;
@@ -15,11 +16,13 @@
     border-radius: 24px;
     background-color: #CFCFCF;
 }
+
 .about-info__video-poster {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 .about-info__body {
     max-width: 610px;
     width: 100%;
@@ -27,17 +30,20 @@
     flex-direction: column;
     align-items: flex-start;
 }
-.about-info__title {
-}
+
+.about-info__title {}
+
 .about-info__texts {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
+
 .about-info__text {
     font-size: 16px;
     line-height: 130%;
 }
+
 .about-info__button {
     margin-top: auto;
     display: block;
@@ -47,106 +53,135 @@
     .about-info__container {
         gap: 40px;
     }
+
     .about-info__title {
         margin-bottom: 35px;
     }
+
     .about-info__video-wrap {
         max-height: 560px;
         max-width: none;
         width: 100%;
     }
+
     .about-info__body {
         max-width: 560px;
     }
 }
+
 @media (max-width: 1101px) {
     .about-info__texts {
         gap: 13px;
     }
+
     .about-info__text {
         font-size: 15px;
     }
 }
+
 @media (max-width: 992px) {
     .about-info__container {
         flex-direction: column;
     }
+
     .about-info__title {
         margin-bottom: 50px;
     }
+
     .about-info__video-wrap {
         max-height: 481px;
         order: 2;
     }
+
     .about-info__body {
         max-width: none;
     }
+
     .about-info__texts {
         gap: 16px;
         margin-bottom: 35px;
     }
+
     .about-info__text {
         font-size: 16px;
     }
 }
+
 @media (max-width: 769px) {
     .about-info__container {
         gap: 46px;
     }
+
     .about-info__title {
         margin-bottom: 46px;
     }
+
     .about-info__video-wrap {
         max-height: 417px;
     }
+
     .about-info__body {
         max-width: none;
     }
+
     .about-info__texts {
         gap: 16px;
     }
+
     .about-info__text {
         font-size: 15px;
     }
+
     .about-info__text {
         font-size: 16px;
     }
 }
+
 @media (max-width: 651px) {
     .about-info__container {
         gap: 48px;
     }
+
     .about-info__title {
         margin-bottom: 48px;
     }
+
     .about-info__texts {
         margin-bottom: 30px;
     }
 }
+
 @media (max-width: 551px) {
     .about-info__container {
         gap: 45px;
     }
+
     .about-info__video-wrap {
         max-height: 350px;
     }
+
     .about-info__body {
         align-items: stretch;
     }
+
     .about-info__title {
         margin-bottom: 45px;
     }
+
     .about-info__texts {
         gap: 15px;
     }
+
     .about-info__text {
         font-size: 14px;
     }
 }
+
 @media (max-width: 431px) {
     .about-info__video-wrap {
         max-height: 223px;
     }
+
     .about-info__texts {
         margin-bottom: 24px;
     }
@@ -154,51 +189,59 @@
 
 
 /* БЛОК "БЛАГОДАРНОСТИ И НАГРАДЫ" */
-.awards {
-}
-.main__awards {
-}
-.awards__container {
-}
+.awards {}
+
+.main__awards {}
+
+.awards__container {}
+
 .avantage-descripion {
     display: flex;
     margin-bottom: 80px;
 }
+
 .avantage-descripion__title {
     margin-bottom: 0px;
     margin-right: 142px;
     max-width: 528px;
     width: 100%;
 }
+
 .avantage-descripion__texts {
     width: 100%;
     padding-bottom: 60px;
 }
+
 .avantage-descripion__pre-title {
     font-size: 24px;
     line-height: 130%;
     margin-bottom: 24px;
     max-width: 610px;
 }
+
 .avantage-descripion__text {
     font-size: 16px;
     line-height: 130%;
 }
+
 .avantage-descripion__text:not(:last-child) {
     margin-bottom: 16px;
 }
+
 .awards__slider {
     width: 100%;
 }
+
 .awards__swiper {
     overflow: visible;
 }
-.awards__swiper-wrapper {
-}
-.awards__swiper-slide {
-}
-.awards__slide {
-}
+
+.awards__swiper-wrapper {}
+
+.awards__swiper-slide {}
+
+.awards__slide {}
+
 .awards__slide-title {
     font-size: 14px;
     font-weight: 500;
@@ -207,9 +250,11 @@
     text-transform: lowercase;
     margin-bottom: 20px;
 }
+
 .awards__slide-title::first-letter {
     text-transform: uppercase;
 }
+
 .awards__slide-wrap-img {
     width: 399px;
     height: 540px;
@@ -217,22 +262,24 @@
     overflow: hidden;
     background-color: #CFCFCF;
 }
+
 .awards__slide-img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
 .awards__swiper-controls {
     display: none;
 }
-.awards__swiper-pagination {
-}
-.awards__swiper-navigation {
-}
-.awards__swiper-button-prev {
-}
-.awards__swiper-button-next {
-}
+
+.awards__swiper-pagination {}
+
+.awards__swiper-navigation {}
+
+.awards__swiper-button-prev {}
+
+.awards__swiper-button-next {}
 
 @media (max-width: 1341px) {
     .awards__slide-wrap-img {
@@ -240,89 +287,108 @@
         height: auto;
         aspect-ratio: 399 / 540;
     }
+
     .avantage-descripion__pre-title {
         font-size: 22px;
     }
+
     .avantage-descripion__text {
         font-size: 15px;
     }
 }
+
 @media (max-width: 1281px) {
     .avantage-descripion {
         margin-bottom: 60px;
     }
+
     .avantage-descripion__texts {
         padding-bottom: 50px;
     }
+
     .avantage-descripion__title {
         margin-right: 117px;
         max-width: 470px;
     }
 }
+
 @media (max-width: 992px) {
     .avantage-descripion__title {
         margin-right: 70px;
         max-width: 348px;
     }
+
     .awards__slide-wrap-img {
         aspect-ratio: 399 / 500;
     }
 }
+
 @media (max-width: 902px) {
     .avantage-descripion__title {
         margin-right: 0px;
     }
+
     .avantage-descripion {
         margin-bottom: 50px;
         gap: 50px;
         flex-direction: column;
     }
+
     .avantage-descripion__texts {
         margin-top: 0px;
         margin-right: 0px;
         padding-bottom: 18px;
     }
+
     .avantage-descripion__pre-title {
         font-size: 22px;
         margin-bottom: 26px;
     }
 }
+
 @media (max-width: 769px) {
     .avantage-descripion__pre-title {
         font-size: 20px;
         margin-bottom: 28px;
     }
+
     .awards__slide-title {
         font-size: 13px;
-    }    
+    }
 }
+
 @media (max-width: 651px) {
     .avantage-descripion {
         margin-bottom: 48px;
         gap: 48px;
     }
+
     .avantage-descripion__texts {
         padding-bottom: 30px;
     }
 }
+
 @media (max-width: 551px) {
     .avantage-descripion {
         margin-bottom: 45px;
         gap: 45px;
     }
+
     .avantage-descripion__texts {
         padding-bottom: 45px;
     }
+
     .avantage-descripion__pre-title {
         margin-bottom: 30px;
     }
+
     .avantage-descripion__text {
         font-size: 14px;
     }
+
     .awards__slide-title {
         font-size: 12px;
     }
 }
 
-@media (max-width: 431px) {
-}
+@media (max-width: 431px) {}
